# agr_curation_schema

./: .gitignore  404.html  ABOUT.md  AUTHORS  ChangeLog  Dockerfile  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
AGMDiseaseAnnotation/: index.html
AGMDiseaseAnnotationDTO/: index.html
AGMPhenotypeAnnotation/: index.html
AGMPhenotypeAnnotationDTO/: index.html
APOTerm/: index.html
ATPTerm/: index.html
AffectedGenomicModel/: index.html
AffectedGenomicModelComponent/: index.html
AffectedGenomicModelComponentDTO/: index.html
AffectedGenomicModelDTO/: index.html
Agent/: index.html
AggregationDatabaseEnum/: index.html
AgmAgmAssociation/: index.html
AgmAgmAssociationDTO/: index.html
AgmAlleleAssociation/: index.html
AgmAlleleAssociationDTO/: index.html
AgmFullNameSlotAnnotation/: index.html
AgmSecondaryIdSlotAnnotation/: index.html
AgmSequenceTargetingReagentAssociation/: index.html
AgmSequenceTargetingReagentAssociationDTO/: index.html
AgmStrAssociation/: index.html
AgmStrAssociationDTO/: index.html
AgmSymbolSlotAnnotation/: index.html
AgmSynonymSlotAnnotation/: index.html
Allele/: index.html
AlleleAlleleAssociation/: index.html
AlleleAlleleAssociationDTO/: index.html
AlleleAssociation/: index.html
AlleleCellLineAssociation/: index.html
AlleleCellLineAssociationDTO/: index.html
AlleleConstructAssociation/: index.html
AlleleConstructAssociationDTO/: index.html
AlleleDTO/: index.html
AlleleDatabaseStatusSlotAnnotation/: index.html
AlleleDatabaseStatusSlotAnnotationDTO/: index.html
AlleleDiseaseAnnotation/: index.html
AlleleDiseaseAnnotationDTO/: index.html
AlleleFullNameSlotAnnotation/: index.html
AlleleFunctionalImpactSlotAnnotation/: index.html
AlleleFunctionalImpactSlotAnnotationDTO/: index.html
AlleleGeneAssociation/: index.html
AlleleGeneAssociationDTO/: index.html
AlleleGenerationMethodAssociation/: index.html
AlleleGenerationMethodAssociationDTO/: index.html
AlleleGenomicEntityAssociation/: index.html
AlleleGenomicEntityAssociationDTO/: index.html
AlleleGermlineTransmissionStatusSlotAnnotation/: index.html
AlleleGermlineTransmissionStatusSlotAnnotationDTO/: index.html
AlleleImageAssociation/: index.html
AlleleImageAssociationDTO/: index.html
AlleleInheritanceModeSlotAnnotation/: index.html
AlleleInheritanceModeSlotAnnotationDTO/: index.html
AlleleMutationTypeSlotAnnotation/: index.html
AlleleMutationTypeSlotAnnotationDTO/: index.html
AlleleNomenclatureEventSlotAnnotation/: index.html
AlleleNomenclatureEventSlotAnnotationDTO/: index.html
AlleleOriginAssociation/: index.html
AlleleOriginAssociationDTO/: index.html
AllelePhenotypeAnnotation/: index.html
AllelePhenotypeAnnotationDTO/: index.html
AlleleProteinAssociation/: index.html
AlleleProteinAssociationDTO/: index.html
AlleleSecondaryIdSlotAnnotation/: index.html
AlleleSymbolSlotAnnotation/: index.html
AlleleSynonymSlotAnnotation/: index.html
AlleleTranscriptAssociation/: index.html
AlleleTranscriptAssociationDTO/: index.html
AlleleVariantAssociation/: index.html
AlleleVariantAssociationDTO/: index.html
Alliance-Gene-Interaction-Schema-Prototype/: index.html
Alliance-Schema-Ingest/: index.html
Alliance-Schema-Prototype-Affected-Genomic-Model/: index.html
Alliance-Schema-Prototype-Allele/: index.html
AllianceMember/: index.html
(+2871 files in other folders)
