[tool.poetry]
name = "agr-curation-schema"
description = "Schema and generated objects for agr-curation-schema data model and upper ontology"
version = "0.0.0"
authors = ["Alliance of Genome Resources"]

packages = [
    { include = "generated" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.2.4"
mkdocs = "^1.3.0"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry.dev-dependencies]
linkml = "^1.2.4"
pytest = "^5.2"
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
