[tool.poetry]
name = "agr-curation-schema"
description = "Schema and generated objects for agr-curation-schema data model and upper ontology"
version = "0.0.0"
authors = ["Alliance of Genome Resources"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.8.5"
mkdocs = "^1.3.0"
mkdocs-mermaid2-plugin = "^0.6.0"
greenlet = "=2.0.1"

[tool.poetry.dev-dependencies]
linkml = "^1.8.5"
pytest = "^5.2"
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
