[metadata]
name = agr_curation_schema
url = https://github.com/alliance-genome/agr_curation_schema
author = Alliance of Genome Resources
author_email = smoxon@lbl.gov, chris@wormbase.org, dossantos@morgan.harvard.edu, mqt@ebi.ac.uk
summary = Model to describe the Alliance curation/persistence data store
description = Model to describe the Alliance curation/persistence data store
long_description = Model to describe the Alliance curation/persistence data store
home_page = https://alliance-genome.github.io/agr_curation_schema
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model
    Alliance
    MOD

[options]
include_package_data = True

[files]
packages =
    agr_curation_schema

data-files = agr_curation_schema/model = agr_curation_schema/model/*
    agr_curation_schema/jsonld_context = agr_curation_schema/jsonld_context/*
    agr_curation_schema/json_schema = agr_curation_schema/json_schema/*
    agr_curation_schema/model = agr_curation_schema/model/*
    agr_curation_schema/sqlddl = agr_curation_schema/sqlddl/*


